tests/baselines/reference/numericClassMembers1.errors.txt
tests/cases/compiler/numericClassMembers1.ts(3,3): error TS2300: Duplicate identifier '0.0'.
tests/cases/compiler/numericClassMembers1.ts(8,2): error TS2300: Duplicate identifier ''0''.


==== tests/cases/compiler/numericClassMembers1.ts (2 errors) ====
    class C234 {
      0 = 1; 
      0.0 = 2;
      ~~~
!!! error TS2300: Duplicate identifier '0.0'.
    }
     
    class C235 { 
      0.0 = 1;
     '0' = 2;
     ~~~
!!! error TS2300: Duplicate identifier ''0''.
    }
    
    class C236 {
        '0.0' = 1;
        '0' = 2;
    }
    